src/objects/AuditQuestionType__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasWeightage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasWeightage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaximumValue__c</fullName>
        <label>MaximumValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumValue__c</fullName>
        <label>MinimumValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiSelectFields__c</fullName>
        <label>MultiSelectFields</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiSelectPredicate__c</fullName>
        <label>MultiSelectPredicate</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiSelectSource__c</fullName>
        <label>MultiSelectSource</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <label>Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AuditQuestionType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AuditQuestionType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditQuestionTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>